Fixing the sidebar misalignment

--- a/darknight/horizontalsidebar.css
+++ b/darknight/horizontalsidebar.css
@@ -1,66 +1,66 @@
 .content_c48ade {
   margin-top: var(--custom-guild-list-width);
-  
+
   overflow: visible;
 }
 
 #app-mount .sidebar_c48ade {
-  
+
   border-radius: 0;
   overflow: visible;
-  
+
 }
 #app-mount .guilds_c48ade {
   transform-origin: top left;
-  
+
   rotate: -90deg;
-  height: 98.6vw !important;
+  height: 98.95vw !important;
   bottom: unset;
   position: absolute !important;
-  
+
   left: 0;
 }
 #app-mount .tree_ef3116 {
   padding-top: var(--HSL-top-padding, var(--size-sm));
-  
-  
+
+
 }
 #app-mount .wrapper_cc5dd2 {
   rotate: 90deg;
-  
-  
-  
+
+
+
 }
 #app-mount .itemsContainer_ef3116,
 #app-mount .stack_dbd263 {
   flex-direction: var(--HSL-server-direction);
   justify-content: var(--HSL-server-alignment);
-  
-  
+
+
 }
 
 .container_c48ade > div[style]:not(.base_c48ade) {
   width: 98.6vw !important;
-  
+
   height: var(--custom-guild-list-width) !important;
   position: absolute;
   top: calc(var(--custom-guild-list-width) + var(--custom-app-top-bar-height));
   pointer-events: none;
   z-index: 1;
-  
-  
+
+
 }
 .container_c48ade > div[style]:not(.base_c48ade) .guilds_c48ade {
   pointer-events: all;
-  
-  
-  
+
+
+
 }
 .container_c48ade > div[style]:not(.base_c48ade) + .base_c48ade .content_c48ade {
   margin-top: calc(var(--custom-guild-list-width) * 2);
-  
-  
-  
+
+
+
 }
 
 
